<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_splashscreen"
    tools:context=".UstadzActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/des_atas"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/informasi_ustadz"/>
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_height="80dp">

                <com.loopeer.shadow.ShadowView
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    app:shadowColor="@android:color/darker_gray"
                    app:cornerRadius="20dp"
                    app:shadowRadius="20dp"
                    app:shadowMargin="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="2">

                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:layout_weight="0.4"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_search"/>

                        <ImageView
                            android:layout_width="7dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_height="match_parent"
                            android:layerType="software"
                            android:background="@drawable/garis_putus_putus_vertikal"/>

                        <EditText
                            android:id="@+id/cari_ustadz"
                            android:layout_weight="1.5"
                            android:layout_width="100dp"
                            android:textSize="15sp"
                            android:hint="@string/cari_ustadz"
                            android:singleLine="true"
                            android:imeOptions="actionDone"
                            android:paddingStart="10dp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@android:color/darker_gray"
                            android:background="@android:color/transparent"
                            android:layout_height="match_parent"
                            tools:ignore="RtlSymmetry"
                            />
                    </LinearLayout>
                </com.loopeer.shadow.ShadowView>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <com.loopeer.shadow.ShadowView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginStart="0dp"
        app:cornerRadiusTL="40dp"
        app:cornerRadiusTR="40dp"
        app:shadowColor="@android:color/darker_gray"
        app:shadowMarginTop="5dp"
        app:shadowRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/judul_ustadz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/temukan_ustadzmu"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/list_ustadz"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true" />

            <android.support.v7.widget.RecyclerView
                android:clipToPadding="false"
                android:id="@+id/tempat_ustadz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/judul_ustadz"
                android:layout_marginTop="20dp"
                android:scrollbars="vertical" />
        </RelativeLayout>
    </com.loopeer.shadow.ShadowView>

</RelativeLayout>