<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp"
    >
    <com.loopeer.shadow.ShadowView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:shadowColor="#ECECEC"
        app:cornerRadius="30dp"
        app:shadowRadius="20dp"
        app:shadowMargin="10dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            android:layout_height="150dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.5"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="0dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:paddingStart="30dp"
                    android:layout_width="0dp"
                    android:gravity="start|center_vertical"
                    android:layout_weight="1.5"
                    android:orientation="horizontal"
                    android:layout_height="match_parent"
                    tools:ignore="NestedWeights,RtlSymmetry">

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/bg_border"
                        >
                        <ImageView
                            android:id="@+id/logo_masjid"
                            android:layout_gravity="center"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_mosque"
                            android:contentDescription="@string/masjid" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="start"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/nama_masjid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-"
                            android:textColor="#3B4F85"
                            android:fontFamily="@font/roboto_bold"
                            android:textFontWeight="500"
                            android:textSize="12sp"
                            />
                        <TextView
                            android:id="@+id/jarak_masjid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@android:color/darker_gray"
                            android:text="@string/_15_km"
                            />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/redirect_map"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <android.support.v7.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/colorBgView"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        >
                        <ImageView

                            android:layout_gravity="center"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:tint="@android:color/white"
                            android:src="@drawable/ic_location"
                            android:contentDescription="@string/masjid" />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ECECEC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="0.5"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="12sp"
                    android:textColor="@android:color/darker_gray"
                    android:text="Alamat "/>
                <TextView
                    android:id="@+id/alamat_masjid"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="#3B4F85"
                    android:fontFamily="@font/roboto_medium"
                    android:textFontWeight="500"
                    android:text="@string/jl_sekeloa_utara_nomer_114"/>
            </LinearLayout>

        </LinearLayout>

    </com.loopeer.shadow.ShadowView>
</RelativeLayout>
